--- a/src/app/styles/components/layout/_header.scss
+++ b/src/app/styles/components/layout/_header.scss
@@ -1,7 +1,4 @@
 .header {
-  position: fixed; top: 0; right: 0; left: 0;
-  z-index: 4;
-  padding: 8px 0 10px 0;
   width: 100%;
   height: $layout-header-height;
   background: #fff;
@@ -11,12 +8,10 @@
 
 .header__container {
   width: 100%;
-  min-height: $layout-header-height - 18px; // TODO: better
+  height: 100%;
+  position: relative;
   max-width: $layout-column-width-wide;
   margin: 0 auto;
-
-  display: flex;
-  align-items: flex-start;
 }
 
 .header__breadcrumb {
